@startuml
class Main{
 + static void main(String[] args)
}

class Bank{
 - String name
 - ArrayList<Customer> customers
 + Bank(String)
 + void addCustomer(Customer)
 + List getCustomers()
 + void runCreateCustomersDialog()
 + String toString()
}

class Customer{
 - String name
 - int balance
 + Customer(String, int)
 + void addToBalance(int)
 + void setBalance(int)
 + String toString()

}


class TextUI {
- Scanner scan
' shows a message and returns the user's input as a String
+ String promptText(String msg)
' shows a message and returns the user's input as an integer
+ int promptNumeric(String msg)
' shows the options, promts for choices until limit is reached, and returns the user's choices as a list
+ ArrayList<String> promptChoice(ArrayList<String> options, int limit, String msg)
' shows a message and lists the content of a list
+ void displayList(ArrayList<String> list, String msg)
}
Main *-- Bank
Bank *-- Customer
Bank *-- TextUI

@enduml
